Fix: button alignment saved

--- a/source/scss/_saved.scss
+++ b/source/scss/_saved.scss
@@ -34,6 +34,10 @@
         margin-right: 9px;
       }
 
+      #fix {
+        margin-left: 0;
+      }
+
       .button.saved {
         &:nth-of-type(2n) {
           margin-left: 10px;
@@ -59,11 +63,19 @@
     }
 
     .last_achievements {
+      .publicationdata,
       h2,
-      p,
-      .publicationdata {
+      p {
         margin-left: auto;
         max-width: 90%;
+      }
+
+      .buttons {
+        margin-left: 45px;
+
+        .button:nth-of-type(2) {
+          margin-left: 0;
+        }
       }
     }
 
